force-app/main/default/objects/Meeting_Survey__c/Meeting_Survey__c.object-meta.xml
<CustomObject>
    <label>Meeting Survey</label>
    <nameField>
        <label>Meeting Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>