force-app/main/default/objects/Meeting_Survey__c/fields/Insights_on_what_was_good_or_bad__c.field-meta.xml
<CustomField>
    <fullName>Insights_on_what_was_good_or_bad__c</fullName>
    <inlineHelpText>We value your feedback. We would appreciate any insight on what we did well and where we can continue.</inlineHelpText>
    <label>Insights on what was good or bad?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>