force-app/main/default/objects/Meeting_Survey__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Meeting Surveys</relationshipLabel>
    <relationshipName>Meeting_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>