force-app/main/default/objects/Meeting_Survey__c/fields/Survey_Complete__c.field-meta.xml
<CustomField>
    <fullName>Survey_Complete__c</fullName>
    <formula>IF(ISPICKVAL( What_was_the_overall_quality_of_the_lead__c,&quot;&quot;), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Complete</label>
    <type>Checkbox</type>
</CustomField>