force-app/main/default/objects/Meeting_Survey__c/fields/What_was_the_overall_quality_of_the_lead__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_overall_quality_of_the_lead__c</fullName>
    <label>What was the overall quality of the lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>